--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 6df0d9325
-	trimbase = 
+	base = 347900cd9
+	trimbase = 6df0d9325
 	parent = upstream
 	previous = a9d486e49
