--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = 1a38000ec
-	trimbase = cff514b8a
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
