--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 58f6a33e8
-	trimbase = 
+	base = ab58fe6d4
+	trimbase = 58f6a33e8
 	parent = upstream
 	previous = a9d486e49
