--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = b63c3b5b8
-	trimbase = 7a825f098
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
