--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 170491c3c
-	trimbase = 
+	base = 1c664a9a8
+	trimbase = 170491c3c
 	parent = upstream
 	previous = a9d486e49
