--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = ff5fd51f1
-	trimbase = 598653a44
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
