--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 871c3298f
-	trimbase = 
+	base = 4cf341bca
+	trimbase = 871c3298f
 	parent = upstream
 	previous = a9d486e49
