--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 060cf6ec4
-	trimbase = f27302053
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
