--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = 0495c5d06
-	trimbase = 
+	base = 0ddd41249
+	trimbase = 0495c5d06
 	parent = upstream
 	previous = a9d486e49
