--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 0ab5f099e
-	trimbase = 370916227
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
