--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = de10a9445
-	trimbase = 
+	base = daaf5c5f8
+	trimbase = de10a9445
 	parent = upstream
 	previous = a9d486e49
