--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 26374f59e
-	trimbase = 0dcdff1b7
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
