--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = e366b0fb5
-	trimbase = 685d0e88a
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
