--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = dfe5ecc3a
-	trimbase = 
+	base = 3f25868c5
+	trimbase = dfe5ecc3a
 	parent = upstream
 	previous = a9d486e49
