--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 681e94083
-	trimbase = 
+	base = b6bc51aaa
+	trimbase = 681e94083
 	parent = upstream
 	previous = a9d486e49
