--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 171660129
-	trimbase = f6cd71845
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
