--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 2e7730e39
-	trimbase = 
+	base = 923032c93
+	trimbase = 2e7730e39
 	parent = upstream
 	previous = a9d486e49
