--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = d6fe575a3
-	trimbase = 
+	base = 0c8dedb4c
+	trimbase = d6fe575a3
 	parent = upstream
 	previous = a9d486e49
