--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 38488213e
-	trimbase = 
+	base = b3667ba44
+	trimbase = 38488213e
 	parent = upstream
 	previous = a9d486e49
