--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 698c55a46
-	trimbase = a06c617d4
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
