--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = 39e2c246a
-	trimbase = e47a53127
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
