--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 640deca71
-	trimbase = 
+	base = 4a73b9332
+	trimbase = 640deca71
 	parent = upstream
 	previous = a9d486e49
