--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = eb9b0ad58
-	trimbase = 3afffda0b
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
