--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 575f1945a
-	trimbase = 
+	base = faa350cf5
+	trimbase = 575f1945a
 	parent = upstream
 	previous = a9d486e49
