--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = af397fe8c
-	trimbase = 2dda590f4
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
