--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = b057e85ab
-	trimbase = 
+	base = d1a175424
+	trimbase = b057e85ab
 	parent = upstream
 	previous = a9d486e49
