--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 2eac143ca
-	trimbase = 28c5d8b89
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
