--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 0e971cb41
-	trimbase = 
+	base = 8a68da7d8
+	trimbase = 0e971cb41
 	parent = upstream
 	previous = a9d486e49
