--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = bccc114b4
-	trimbase = 26fee8810
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
