--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 39501aa1a
-	trimbase = a9757237c
+	trimbase = 
 	parent = upstream
 	previous = 959408da7
