--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = fbb583a58
-	trimbase = 
+	base = 4e0472b96
+	trimbase = fbb583a58
 	parent = upstream
 	previous = a9d486e49
