--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = f2835e76d
-	trimbase = 04ab6ee1a
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
