--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 04ddbc89d
-	trimbase = 
+	base = 7a7511ddf
+	trimbase = 04ddbc89d
 	parent = upstream
 	previous = 38ad63f10
