--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 85b731579
-	trimbase = 032527f3d
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
