--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = daaf5c5f8
-	trimbase = de10a9445
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
