--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 4db66051a
-	trimbase = 
+	base = b93ec1893
+	trimbase = 4db66051a
 	parent = upstream
 	previous = 38ad63f10
