--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 966c79b2c
-	trimbase = 
+	base = fb5f716d3
+	trimbase = 966c79b2c
 	parent = upstream
 	previous = 38ad63f10
