--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = a0033f598
-	trimbase = 
+	base = b0c0c1284
+	trimbase = a0033f598
 	parent = upstream
 	previous = 38ad63f10
