--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = eeab43a8c
-	trimbase = 81e92504a
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
