--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 8c8c93e1b
-	trimbase = 
+	base = 01bf4714c
+	trimbase = 8c8c93e1b
 	parent = upstream
 	previous = 38ad63f10
