--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = 716c7df40
-	trimbase = 
+	base = bb480469a
+	trimbase = 716c7df40
 	parent = upstream
 	previous = 38ad63f10
