--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 70534cc7b
-	trimbase = 
+	base = 30fae9328
+	trimbase = 70534cc7b
 	parent = upstream
 	previous = 38ad63f10
