--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 458c52676
-	trimbase = 
+	base = 527c0fbb8
+	trimbase = 458c52676
 	parent = upstream
 	previous = 38ad63f10
