--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = d625a29ef
-	trimbase = 
+	base = cc102e382
+	trimbase = d625a29ef
 	parent = upstream
 	previous = 38ad63f10
