--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 4a663378c
-	trimbase = d40dd0484
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
