--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = fd53d9b9b
-	trimbase = 
+	base = 3523c2f68
+	trimbase = fd53d9b9b
 	parent = upstream
 	previous = 38ad63f10
