--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 3f6b40e89
-	trimbase = 06dfe6b40
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
