--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 83bc39fd1
-	trimbase = 
+	base = 41452da72
+	trimbase = 83bc39fd1
 	parent = upstream
 	previous = 38ad63f10
