--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = d15779e16
-	trimbase = 
+	base = 0fe1e5b43
+	trimbase = d15779e16
 	parent = upstream
 	previous = 38ad63f10
