--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = dc970667b
-	trimbase = 
+	base = dd444f48f
+	trimbase = dc970667b
 	parent = upstream
 	previous = 38ad63f10
