--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = b3667ba44
-	trimbase = 38488213e
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
