--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 3ac48b22d
-	trimbase = 
+	base = 0e352352b
+	trimbase = 3ac48b22d
 	parent = upstream
 	previous = 38ad63f10
