--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = d1a175424
-	trimbase = b057e85ab
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
