--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = fda07247d
-	trimbase = 
+	base = 5c2c54910
+	trimbase = fda07247d
 	parent = upstream
 	previous = 38ad63f10
