--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 4e0472b96
-	trimbase = fbb583a58
+	trimbase = 
 	parent = upstream
 	previous = a9d486e49
