--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 91a8b0d80
-	trimbase = 
+	base = 6d156f3d5
+	trimbase = 91a8b0d80
 	parent = upstream
 	previous = 38ad63f10
