--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = f49ab9f73
-	trimbase = 
+	base = 37a919352
+	trimbase = f49ab9f73
 	parent = upstream
 	previous = 38ad63f10
