--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 396a79f7b
-	trimbase = 
+	base = 158662e1a
+	trimbase = 396a79f7b
 	parent = upstream
 	previous = 38ad63f10
