--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 7a7511ddf
-	trimbase = 04ddbc89d
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
