--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 9dfaa6765
-	trimbase = 24a6602d8
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
