--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = d32dbefd8
-	trimbase = 
+	base = e45d96594
+	trimbase = d32dbefd8
 	parent = upstream
 	previous = 54156d569
