--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 38404c801
-	trimbase = 
+	base = 2b668a914
+	trimbase = 38404c801
 	parent = upstream
 	previous = 54156d569
