--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = b0c0c1284
-	trimbase = a0033f598
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
