--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 4f1fb40ff
-	trimbase = 
+	base = 06e40a8ce
+	trimbase = 4f1fb40ff
 	parent = upstream
 	previous = 54156d569
