--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = bb480469a
-	trimbase = 716c7df40
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
