--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = 47e4286d4
-	trimbase = 
+	base = 1bedd127f
+	trimbase = 47e4286d4
 	parent = upstream
 	previous = 54156d569
