--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 0418a15bf
-	trimbase = 
+	base = 421905c85
+	trimbase = 0418a15bf
 	parent = upstream
 	previous = 54156d569
