--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = e4597ec1e
-	trimbase = 40063068f
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
