--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = da3ae36f6
-	trimbase = 
+	base = 32a6d2550
+	trimbase = da3ae36f6
 	parent = upstream
 	previous = 54156d569
