--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = b21df2508
-	trimbase = 
+	base = c2ef17b4d
+	trimbase = b21df2508
 	parent = upstream
 	previous = 54156d569
