--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 1aa030ebc
-	trimbase = 
+	base = 4d7847279
+	trimbase = 1aa030ebc
 	parent = upstream
 	previous = 54156d569
