--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 41452da72
-	trimbase = 83bc39fd1
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
