--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 02df5cf5a
-	trimbase = 
+	base = 85685aa1d
+	trimbase = 02df5cf5a
 	parent = upstream
 	previous = 54156d569
