--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 733fbe5bd
-	trimbase = 
+	base = d2738556a
+	trimbase = 733fbe5bd
 	parent = upstream
 	previous = 54156d569
