--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = 11d46218b
-	trimbase = 246e7c31e
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
