--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 6119e6ae3
-	trimbase = 
+	base = cd62d36e1
+	trimbase = 6119e6ae3
 	parent = upstream
 	previous = 54156d569
