--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 47858eeea
-	trimbase = 
+	base = 7f8746e1b
+	trimbase = 47858eeea
 	parent = upstream
 	previous = 54156d569
