--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 5c2c54910
-	trimbase = fda07247d
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
