--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = f215062d3
-	trimbase = 
+	base = 759eb2991
+	trimbase = f215062d3
 	parent = upstream
 	previous = 54156d569
