--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = 53537d41b
-	trimbase = 74283b6a3
+	trimbase = 
 	parent = upstream
 	previous = 38ad63f10
