--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = e88f1153a
-	trimbase = 
+	base = cabef1986
+	trimbase = e88f1153a
 	parent = upstream
 	previous = 54156d569
