--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 6670099eb
-	trimbase = 
+	base = 20099d53e
+	trimbase = 6670099eb
 	parent = upstream
 	previous = 54156d569
