--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 85810bafa
-	trimbase = 
+	base = 4993a08df
+	trimbase = 85810bafa
 	parent = upstream
 	previous = 54156d569
