--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 56dd9c5d6
-	trimbase = f1c6d6591
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
