--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 5bc20a1f6
-	trimbase = 
+	base = 4594a0077
+	trimbase = 5bc20a1f6
 	parent = upstream
 	previous = 6f33b51ba
