--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = cb6ee7ac5
-	trimbase = b5d7db1b8
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
