--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 309df916e
-	trimbase = 
+	base = 7c1a69263
+	trimbase = 309df916e
 	parent = upstream
 	previous = 6f33b51ba
