--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = e45d96594
-	trimbase = d32dbefd8
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
