--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = a58f401a4
-	trimbase = 
+	base = 89f6e0dd5
+	trimbase = a58f401a4
 	parent = upstream
 	previous = 6f33b51ba
