--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 06e40a8ce
-	trimbase = 4f1fb40ff
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
