--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = c25932ad3
-	trimbase = 
+	base = 82130c980
+	trimbase = c25932ad3
 	parent = upstream
 	previous = 6f33b51ba
