--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = a4ac6c2a3
-	trimbase = 39dd529d7
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
