--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 69e9cea9c
-	trimbase = 
+	base = 134edbb0c
+	trimbase = 69e9cea9c
 	parent = upstream
 	previous = 6f33b51ba
