--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 1bedd127f
-	trimbase = 47e4286d4
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
