--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = c2ef17b4d
-	trimbase = b21df2508
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
