--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 7c9482a89
-	trimbase = 993fc6826
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
