--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 1cdb320e2
-	trimbase = 
+	base = dbc6c43dd
+	trimbase = 1cdb320e2
 	parent = upstream
 	previous = 6f33b51ba
