--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 444f0ab2e
-	trimbase = 99db94de0
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
