--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 23528b3bb
-	trimbase = 
+	base = 1f0b8819c
+	trimbase = 23528b3bb
 	parent = upstream
 	previous = 6f33b51ba
