--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = cd62d36e1
-	trimbase = 6119e6ae3
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
