--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = cabef1986
-	trimbase = e88f1153a
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
