--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = ec52915dd
-	trimbase = 
+	base = d71318021
+	trimbase = ec52915dd
 	parent = upstream
 	previous = 6f33b51ba
