--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 5913dd251
-	trimbase = 
+	base = 8c199ae14
+	trimbase = 5913dd251
 	parent = upstream
 	previous = 6f33b51ba
