--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 85685aa1d
-	trimbase = 02df5cf5a
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
