--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = bc737ec49
-	trimbase = 
+	base = f6d93bf99
+	trimbase = bc737ec49
 	parent = upstream
 	previous = 6f33b51ba
