--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = dd6a17a14
-	trimbase = 
+	base = ae1f34e01
+	trimbase = dd6a17a14
 	parent = upstream
 	previous = 6f33b51ba
