--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 759eb2991
-	trimbase = f215062d3
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
