--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = f7574373e
-	trimbase = 
+	base = 914935886
+	trimbase = f7574373e
 	parent = upstream
 	previous = 6f33b51ba
