--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = def79302b
-	trimbase = 414aa8cc0
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
