--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 4d7847279
-	trimbase = 1aa030ebc
+	trimbase = 
 	parent = upstream
 	previous = 54156d569
