--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = c2d574edf
-	trimbase = c9d99ef96
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
