--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 602fec002
-	trimbase = 
+	base = f3a76c9bb
+	trimbase = 602fec002
 	parent = upstream
 	previous = 9f708e672
