--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = 49fed502f
-	trimbase = 5bd141f6c
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
