--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 9fea02369
-	trimbase = 
+	base = b7c828cc3
+	trimbase = 9fea02369
 	parent = upstream
 	previous = 9f708e672
