--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 712bd664a
-	trimbase = da9a4959f
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
