--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = dbc6c43dd
-	trimbase = 1cdb320e2
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
