--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = fb04a61e5
-	trimbase = 
+	base = 8f74ba869
+	trimbase = fb04a61e5
 	parent = upstream
 	previous = 9f708e672
