--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 94bfa34e9
-	trimbase = 
+	base = e84f392b5
+	trimbase = 94bfa34e9
 	parent = upstream
 	previous = 9f708e672
