--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 011e6ddc6
-	trimbase = 
+	base = 7500855e5
+	trimbase = 011e6ddc6
 	parent = upstream
 	previous = 9f708e672
