--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 39388ae94
-	trimbase = 952076115
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
