--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 6073c4f02
-	trimbase = 
+	base = e7def2737
+	trimbase = 6073c4f02
 	parent = upstream
 	previous = 9f708e672
