--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 476872917
-	trimbase = 
+	base = 9b6b13191
+	trimbase = 476872917
 	parent = upstream
 	previous = 9f708e672
