--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = 536c67714
-	trimbase = b98aa62b0
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
