--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = da5b4ee3e
-	trimbase = 
+	base = 1e93a7b49
+	trimbase = da5b4ee3e
 	parent = upstream
 	previous = 9f708e672
