--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = fe55632de
-	trimbase = 80145fc36
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
