--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = e6e19f91b
-	trimbase = 
+	base = 6ec279f43
+	trimbase = e6e19f91b
 	parent = upstream
 	previous = 9f708e672
