--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 4b38ae509
-	trimbase = 42bd34f1b
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
