--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 914935886
-	trimbase = f7574373e
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
