--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 9f2395a38
-	trimbase = ebe0339a4
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
