--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = e5c8a56d7
-	trimbase = 
+	base = 2755c9fcb
+	trimbase = e5c8a56d7
 	parent = upstream
 	previous = 9f708e672
