--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = a13e45f12
-	trimbase = 
+	base = 56dfb2d0f
+	trimbase = a13e45f12
 	parent = upstream
 	previous = 9f708e672
