--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 3719bdfb3
-	trimbase = 1e4fd8e26
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
