--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = edc27ea12
-	trimbase = 
+	base = b9b6ae441
+	trimbase = edc27ea12
 	parent = upstream
 	previous = 9f708e672
