--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = b5c13ee77
-	trimbase = ca7882c77
+	trimbase = 
 	parent = upstream
 	previous = 6f33b51ba
