--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = a66fee4ba
-	trimbase = 
+	base = f8c15a2e5
+	trimbase = a66fee4ba
 	parent = upstream
 	previous = 9f708e672
