--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = eb9d076c8
-	trimbase = 3df29cde2
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
