--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 453a5dcec
-	trimbase = 
+	base = e783f6947
+	trimbase = 453a5dcec
 	parent = upstream
 	previous = b7c44eb4c
