--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 8877fc621
-	trimbase = 
+	base = c6077b618
+	trimbase = 8877fc621
 	parent = upstream
 	previous = b7c44eb4c
