--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = a2cb7f666
-	trimbase = 4d75c7e49
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
