--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = 99b6fcae8
-	trimbase = 
+	base = 7838a5565
+	trimbase = 99b6fcae8
 	parent = upstream
 	previous = b7c44eb4c
