--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 75fd2f436
-	trimbase = 
+	base = b264a5bd8
+	trimbase = 75fd2f436
 	parent = upstream
 	previous = b7c44eb4c
