--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = eb802d6d9
-	trimbase = 058b6dc70
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
