--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 7656ce852
-	trimbase = 
+	base = d66e5c438
+	trimbase = 7656ce852
 	parent = upstream
 	previous = b7c44eb4c
