--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = e7def2737
-	trimbase = 6073c4f02
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
