--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = 19775bee8
-	trimbase = 
+	base = 6c4237e0d
+	trimbase = 19775bee8
 	parent = upstream
 	previous = b7c44eb4c
