--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 2a844c688
-	trimbase = 
+	base = 038baa4f0
+	trimbase = 2a844c688
 	parent = upstream
 	previous = b7c44eb4c
