--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = e84f392b5
-	trimbase = 94bfa34e9
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
