--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = efc69172b
-	trimbase = 
+	base = 59aa8555d
+	trimbase = efc69172b
 	parent = upstream
 	previous = b7c44eb4c
