--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = bb6b2bf75
-	trimbase = 
+	base = 2b7217e7a
+	trimbase = bb6b2bf75
 	parent = upstream
 	previous = b7c44eb4c
