--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 248b26b3b
-	trimbase = d90914099
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
