--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 49c68bb2b
-	trimbase = 
+	base = 19093b3af
+	trimbase = 49c68bb2b
 	parent = upstream
 	previous = b7c44eb4c
