--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = f8c15a2e5
-	trimbase = a66fee4ba
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
