--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 1e2e321d2
-	trimbase = 
+	base = e637b8621
+	trimbase = 1e2e321d2
 	parent = upstream
 	previous = b7c44eb4c
