--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 8166fcecc
-	trimbase = 7a6a4815a
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
