--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = e1d6090bc
-	trimbase = 
+	base = 5f367993f
+	trimbase = e1d6090bc
 	parent = upstream
 	previous = b7c44eb4c
