--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 495f635d4
-	trimbase = 
+	base = 38ae12eaf
+	trimbase = 495f635d4
 	parent = upstream
 	previous = b7c44eb4c
