--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 53c2236fc
-	trimbase = 7ea8bcf42
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
