--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 9be9e06c3
-	trimbase = 
+	base = 90c7d24cb
+	trimbase = 9be9e06c3
 	parent = upstream
 	previous = b7c44eb4c
