--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 81416c67d
-	trimbase = d5c04cb1a
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
