--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = 5a47da3cc
-	trimbase = 64c955f0a
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
