--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = d793b5a96
-	trimbase = 
+	base = c5fe012a9
+	trimbase = d793b5a96
 	parent = upstream
 	previous = b7c44eb4c
