--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = e7ec8938b
-	trimbase = d4426142e
+	trimbase = 
 	parent = upstream
 	previous = 9f708e672
