--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = c5beee956
-	trimbase = 
+	base = 17715e009
+	trimbase = c5beee956
 	parent = upstream
 	previous = b7c44eb4c
