--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = f24251e1f
-	trimbase = f3b6af232
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
