--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = a55d75f3a
-	trimbase = 
+	base = 419ecac8b
+	trimbase = a55d75f3a
 	parent = upstream
 	previous = ab52e3778
