--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 2144e698a
-	trimbase = 
+	base = b9e5aa6d2
+	trimbase = 2144e698a
 	parent = upstream
 	previous = ab52e3778
