--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 9b400052d
-	trimbase = 1fdc2d984
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
