--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 75345fc1a
-	trimbase = 
+	base = 62e5c633f
+	trimbase = 75345fc1a
 	parent = upstream
 	previous = ab52e3778
