--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = a0f5a3f2c
-	trimbase = e16fbed0f
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
