--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 44b4b7cb2
-	trimbase = 
+	base = 6ad7ff80f
+	trimbase = 44b4b7cb2
 	parent = upstream
 	previous = ab52e3778
