--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 11c81edb0
-	trimbase = 
+	base = 471bde8cb
+	trimbase = 11c81edb0
 	parent = upstream
 	previous = ab52e3778
