--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 7838a5565
-	trimbase = 99b6fcae8
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
