--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = 1e7d54cc0
-	trimbase = 
+	base = 37e6bbff6
+	trimbase = 1e7d54cc0
 	parent = upstream
 	previous = ab52e3778
