--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = b9ab34528
-	trimbase = 
+	base = daeeb5777
+	trimbase = b9ab34528
 	parent = upstream
 	previous = ab52e3778
