--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 35176d37c
-	trimbase = 
+	base = 2e776e231
+	trimbase = 35176d37c
 	parent = upstream
 	previous = ab52e3778
