--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 16adcf863
-	trimbase = 5730b50ae
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
