--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = 59aa8555d
-	trimbase = efc69172b
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
