--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = e92510038
-	trimbase = 
+	base = 245abe6be
+	trimbase = e92510038
 	parent = upstream
 	previous = ab52e3778
