--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 16883944a
-	trimbase = 
+	base = b68d1d727
+	trimbase = 16883944a
 	parent = upstream
 	previous = ab52e3778
