--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 535dfc04e
-	trimbase = 
+	base = e7df62544
+	trimbase = 535dfc04e
 	parent = upstream
 	previous = ab52e3778
