--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 9f2bb14d0
-	trimbase = 
+	base = bf193b31d
+	trimbase = 9f2bb14d0
 	parent = upstream
 	previous = ab52e3778
