--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = cc6349c40
-	trimbase = dd3986e2e
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
