--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = e564afca8
-	trimbase = 
+	base = a55aa8fd3
+	trimbase = e564afca8
 	parent = upstream
 	previous = ab52e3778
