--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 5c583c294
-	trimbase = 
+	base = 451f94b92
+	trimbase = 5c583c294
 	parent = upstream
 	previous = ab52e3778
