--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 90c7d24cb
-	trimbase = 9be9e06c3
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
