--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = d9053ad40
-	trimbase = 
+	base = 37c793288
+	trimbase = d9053ad40
 	parent = upstream
 	previous = ab52e3778
