--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 538663f71
-	trimbase = fa5d91eaa
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
