--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = c5fe012a9
-	trimbase = d793b5a96
+	trimbase = 
 	parent = upstream
 	previous = b7c44eb4c
