--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 894901bf0
-	trimbase = 
+	base = 6f3524014
+	trimbase = 894901bf0
 	parent = upstream
 	previous = ab52e3778
