--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 7e6351e8e
-	trimbase = 
+	base = c6c20812c
+	trimbase = 7e6351e8e
 	parent = upstream
 	previous = ab52e3778
