--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = f2d68e6ac
-	trimbase = 
+	base = 706b017f2
+	trimbase = f2d68e6ac
 	parent = upstream
 	previous = d5d8c1c2c
