--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 56fc3538f
-	trimbase = 7db2699a4
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
