--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = daeeb5777
-	trimbase = b9ab34528
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
