--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = 6ad7ff80f
-	trimbase = 44b4b7cb2
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
