--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 37e6bbff6
-	trimbase = 1e7d54cc0
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
