--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = f4899ca6a
-	trimbase = 
+	base = 44411e646
+	trimbase = f4899ca6a
 	parent = upstream
 	previous = d5d8c1c2c
