--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = df6366acd
-	trimbase = 7e44e219e
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
