--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = e55cc960c
-	trimbase = f04b66fc3
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
