--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = c6b75b28d
-	trimbase = 
+	base = e8f722978
+	trimbase = c6b75b28d
 	parent = upstream
 	previous = d5d8c1c2c
