--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = 396843842
-	trimbase = 
+	base = e6cfe6187
+	trimbase = 396843842
 	parent = upstream
 	previous = d5d8c1c2c
