--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 650b1d9da
-	trimbase = 
+	base = d13f5a228
+	trimbase = 650b1d9da
 	parent = upstream
 	previous = d5d8c1c2c
