--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = ecef50978
-	trimbase = a4d9298e0
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
