--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = e7df62544
-	trimbase = 535dfc04e
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
