--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = ca146ab78
-	trimbase = 4a4e4a157
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
