--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 8aad83f4d
-	trimbase = 
+	base = 6b8147098
+	trimbase = 8aad83f4d
 	parent = upstream
 	previous = d5d8c1c2c
