--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = 37c793288
-	trimbase = d9053ad40
+	trimbase = 
 	parent = upstream
 	previous = ab52e3778
