--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 85b7283ad
-	trimbase = 
+	base = 25eee2486
+	trimbase = 85b7283ad
 	parent = upstream
 	previous = d5d8c1c2c
