--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 3ff55b7c9
-	trimbase = 
+	base = b95f42b15
+	trimbase = 3ff55b7c9
 	parent = upstream
 	previous = d5d8c1c2c
