--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = aabd1fb2c
-	trimbase = 
+	base = d1c8afe7b
+	trimbase = aabd1fb2c
 	parent = upstream
 	previous = 3f8aae6f9
