--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 44411e646
-	trimbase = f4899ca6a
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
