--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = bc0093d73
-	trimbase = 
+	base = e031fa205
+	trimbase = bc0093d73
 	parent = upstream
 	previous = 3f8aae6f9
