--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = d0248246f
-	trimbase = dc31bd687
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
