--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = fa6e05ff0
-	trimbase = 
+	base = 6937ff45f
+	trimbase = fa6e05ff0
 	parent = upstream
 	previous = 3f8aae6f9
