--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = 1c4645fed
-	trimbase = bb0e35470
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
