--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 61a86c5db
-	trimbase = 
+	base = 8e5574e22
+	trimbase = 61a86c5db
 	parent = upstream
 	previous = 3f8aae6f9
