--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 210bc1237
-	trimbase = 
+	base = db831e3c9
+	trimbase = 210bc1237
 	parent = upstream
 	previous = 3f8aae6f9
