--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = 7097e51b0
-	trimbase = 47c38c4b0
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
