--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = bbbd150ac
-	trimbase = 
+	base = c1321a9ba
+	trimbase = bbbd150ac
 	parent = upstream
 	previous = 3f8aae6f9
