--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
 	base = c7d725c88
-	trimbase = 153919c43
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
