--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = 460773170
-	trimbase = 
+	base = cd102c79d
+	trimbase = 460773170
 	parent = upstream
 	previous = 3f8aae6f9
