--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 736c97653
-	trimbase = 0ada3b1f5
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
