--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = e3832e86f
-	trimbase = 
+	base = 4a571ecbf
+	trimbase = e3832e86f
 	parent = upstream
 	previous = 3f8aae6f9
