--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = 214288443
-	trimbase = 5569e1134
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
