--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = 903726bfe
-	trimbase = 
+	base = dfd054b13
+	trimbase = 903726bfe
 	parent = upstream
 	previous = 3f8aae6f9
