--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 4cc347543
-	trimbase = a789b55fb
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
