--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = c27e30b86
-	trimbase = 
+	base = ce371a475
+	trimbase = c27e30b86
 	parent = upstream
 	previous = 3f8aae6f9
