--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
 	base = b53e86412
-	trimbase = 1d0832a48
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
