--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = 68bf40929
-	trimbase = 
+	base = 7f05b64fd
+	trimbase = 68bf40929
 	parent = upstream
 	previous = 3f8aae6f9
